<resources>
    <string name="google_maps_key" translatable="false">AIzaSyASDAqsfyHhj4IssOvNKD4BVPccvdHhGQc</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">E-Culture Tool</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="crud_manage_profilo">Gestisci i tuoi dati</string>
    <string name="durata_visita">Durata visita</string>
    <string name="maps_no_rout">Nessuna strada trovata</string>
    <string name="msg_error_no_stato">Nessuno stato trovato</string>
    <string name="msg_error_no_regione">Nessuna regione trovata per lo stato %s</string>
    <string name="msg_error_no_provincia">Nessuna provincia trovata per la regione %s</string>
    <string name="msg_error_no_citta">Nessuna città trovata per la provincia di %s</string>
    <string name="msg_error_salvataggio">Errore di salvataggio per %s</string>
    <string name="msg_error_delete">Problema di eliminazione del %s</string>
    <string name="msg_error_autori_no_trovati">Nessun autore trovato</string>
    <string name="msg_error_percorso_nome_obbligatorio">Il nome del percorso è obbligatorio</string>
    <string name="msg_error_nome_obbligatorio">Il nome è obbligatorio</string>
    <string name="msg_error_cognome_obbligatorio">Il cognome è obbligatorio</string>
    <string name="msg_error_data_di_nascita_obbligatorio">La data di nascita è obbligatoria</string>
    <string name="msg_error_email_obbligatorio">L\'email è obbligatorio</string>
    <string name="msg_error_codice_fiscale_obbligatorio">Il codice fiscale è obbligatorio</string>
    <string name="msg_error_percorso_musei">Devi aggiungere almeno un elemento per salvare il percorso.</string>
    <string name="error_sincronizzazione">Errore nella sincronizzazione dei dati, riprova più tardi</string>
    <string name="campi_vuoti">I campi non possono essere vuoti</string>
    <string name="email_non_corretta">L\'email inserita non è corretta</string>
    <string name="login_non_valida">I dati di login non sono corretti</string>
    <string name="zona_non_trovata">Non è stata trovata alcuna zona per la provincia: %s</string>
    <string name="oggetti_non_trovati">Non è stato trovato alcun oggetto per la zona selezionata</string>
    <string name="zona_non_trovata_per_la_regione">Non è stata trovata alcuna regione per le zona</string>
    <string name="provincia_non_trovata_per_la_regione">Non è stata trovata alcuna provincia nella regione: %s</string>
    <string name="msg_error_update">Impossibile aggiornare</string>
    <string name="msg_success_salvato">%s è stato salvato con successo</string>
    <string name="msg_success_eliminato">%s è stato eliminato con successo</string>
    <string name="descrizione">Descrizione:</string>
    <string name="btn_modifica">Modifica</string>
    <string name="btn_elimina">Elimina</string>
    <string name="cancella">Cancella</string>
    <string name="annulla">Annulla</string>
    <string name="aggiorna">Aggiorna</string>
    <string name="seleziona_stato">Seleziona uno stato</string>
    <string name="seleziona_autore">Seleziona un autore</string>
    <string name="seleziona_regione">Seleziona una regione</string>
    <string name="seleziona_provincia">Seleziona una provincia</string>
    <string name="seleziona_citta">Seleziona una città</string>
    <string name="visualizza_tutti_i_musei">Musei presenti</string>
    <string name="visualizza_tutti_gli_autori">Autori presenti</string>
    <string name="visualizza_tutti_gli_oggetti">Oggetti presenti</string>
    <string name="visualizza_tutti_i_percorsi">Percorsi creati</string>
    <string name="percorso_titolo">%s</string>
    <string name="app_name">E-Culture Tool</string>
    <string name="welcome">Benvenuto su E-Culture Tool</string>
    <string name="login">Login</string>
    <string name="login_visitatore">Visitatore</string>
    <string name="login_guida">Guida</string>
    <string name="login_curatore">Curatore</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="registrazione">Registrazione</string>
    <string name="registrazione_successo">Registrazione avvenuta con successo</string>
    <string name="forgot_password">Password dimenticata</string>
    <string name="name">Nome</string>
    <string name="insert_name">Inserisci Nome</string>
    <string name="info_name">Il Nome non può essere vuoto!</string>
    <string name="surname">Cognome</string>
    <string name="insert_surname">Inserisci Cognome</string>
    <string name="info_surname">Il Cognome non può essere vuoto!</string>
    <string name="username">Username</string>
    <string name="insert_username">Inserisci Username</string>
    <string name="info_username">NOTA: L\'Username non deve prevedere spazi.</string>
    <string name="null_username">L\'Username non può essere vuoto!</string>
    <string name="email">E-mail</string>
    <string name="email_gia_esistente">E-mail già esistente</string>
    <string name="insert_email">Inserisci E-mail</string>
    <string name="info_email">L\'E-mail non può essere vuota!</string>
    <string name="not_an_email">Non hai inserito una E-mail!</string>
    <string name="password">Password</string>
    <string name="accesso_diretto">Accesso diretto</string>
    <string name="insert_password">Inserisci Password</string>
    <string name="info_password">NOTA: La Password deve contenere almeno 6 caratteri e un carattere speciale.</string>
    <string name="null_password">La Password non può essere vuota!</string>
    <string name="repeat_password">Ripeti Password</string>
    <string name="passwords_not_equal">Le password non sono uguali!</string>
    <string name="user_type">Tipo Utente</string>
    <string name="visitatore">Visitatore</string>
    <string name="curatore">Curatore</string>
    <string name="infouser_type">Seleziona un tipo utente.</string>
    <string name="confirmRegistation">Registrati</string>
    <string name="plus">+</string>
    <string name="msg_seleziona_regione">Seleziona la regione</string>
    <string name="msg_seleziona_provincia">Seleziona la provincia</string>
    <string name="msg_seleziona_zona">Seleziona la zona</string>
    <string name="msg_seleziona_oggetto">Seleziona l\'oggetto</string>
    <string name="no_routes_msg_label">Non sono presenti percorsi di visita. Crea un percorso di visita cliccando sul tasto "+".</string>
    <string name="scan_qr_code">Scansiona il QR Code</string>
    <string name="user_name">Nome utente</string>
    <string name="importa_percorsi_visita">Importa percorsi di visita</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="recensisci">Recensisci</string>
    <string name="update_database">Aggiorna dati</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="no_visit_zone_msg_label">Non sono presenti zone di visita. Aggiungine una cliccando sul tasto "+"</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="zone">Zona</string>
    <string name="info_zone">Immagine Zona</string>
    <string name="view_zone">Visualizza Zona</string>
    <string name="change_zone">Cambia Zona</string>
    <string name="delete_zone">Elimina Zona</string>
    <string name="zone_name">Nome Zona:</string>
    <string name="zone_region">Regione:</string>
    <string name="zone_provincia">Provincia:</string>
    <string name="zone_zipcode">CAP:</string>
    <string name="object">Oggetto</string>
    <string name="info_object">Immagine Oggetto</string>
    <string name="view_object">Visualizza Oggetto</string>
    <string name="change_object">Cambia Oggetto</string>
    <string name="delete_object">Elimina Oggetto</string>
    <string name="object_name">Nome Oggetto:</string>
    <string name="object_year">Anno:</string>
    <string name="object_author">Autore:</string>
    <string name="museo_uc">Museo</string>
    <string name="del_museo">del museo</string>
    <string name="il_museo">il museo</string>
    <string name="autore_uc">Autore</string>
    <string name="l_autore">l\'autore</string>
    <string name="del_autore">dell\'autore</string>
    <string name="percorso_uc">Percorso</string>
    <string name="del_percorso">del percorso</string>
    <string name="museum">Museo</string>
    <string name="info_museum">Immagine Museo</string>
    <string name="view_museum">Visualizza Museo</string>
    <string name="change_museum">Cambia Museo</string>
    <string name="delete_museum">Elimina Museo</string>
    <string name="delete_museum_msq_question">Vuoi cancellare il museo selezionato?</string>
    <string name="museum_name">Nome Museo: </string>
    <string name="museum_phone">Numero di telefono: </string>
    <string name="museum_address">Indirizzo: </string>
    <string name="museum_city">Città: </string>
    <string name="museum_region">Regione: </string>
    <string name="museum_provincia">Provincia: </string>
    <string name="museum_zip_code">C.A.P.: </string>
    <string name="museum_email">E-mail: </string>
    <string name="museum_website">Sito Web: </string>
    <string name="museum_hours">Orari di apertura/chiusura: </string>
    <string name="museum_image">Immagine: </string>
    <string name="delete_percorso">Elimina percorso</string>
    <string name="delete_percorso_msq_question">Vuoi cancellare il percorso selezionato?</string>
    <string name="crud_autori_create">Crea un nuovo autore</string>
    <string name="crud_autori_list">Visualizza tutti gli autori</string>
    <string name="delete_autore">Cancella autore</string>
    <string name="delete_autore_msq_question">Vuoi cancellare l\'autore selezionato?</string>
    <string name="crud_autori_codice">Codice autore</string>
    <string name="crud_autori_update_titolo">Aggiornamento autore</string>
    <string name="crud_autori_gestisci">Gestisci gli autori</string>
    <string name="crud_autori_data_nascita">Data di nascita</string>
    <string name="crud_autori_data_morte">Data di morte</string>
    <string name="crud_autori_nome_obbligatorio">Il nome dell\'autore è obbligatorio</string>
    <string name="delete_oggetto">Cancella oggetto</string>
    <string name="crud_oggetto_create">Crea oggetto</string>
    <string name="cerca_musei_oggetti">Cerca un museo o un oggetto</string>
    <string name="crud_cancella">Cancella</string>
    <string name="crud_manage_museo">Gestisci i musei</string>
    <string name="crud_create_museo">Crea un nuovo museo</string>
    <string name="crud_txt_nome">Nome</string>
    <string name="crud_txt_data_di_nascita">Data di nascita</string>
    <string name="crud_txt_telefono">Telefono</string>
    <string name="crud_txt_indirizzo">Indirizzo</string>
    <string name="crud_txt_citta">Città</string>
    <string name="crud_txt_cap">C.A.P.</string>
    <string name="crud_txt_regione">Regione</string>
    <string name="crud_txt_sito">Sito</string>
    <string name="crud_txt_orario_apertura">Orario \ndi apertura</string>
    <string name="crud_txt_immagine">Immagine</string>
    <string name="crud_txt_salva">Salva</string>
    <string name="crud_txt_seleziona_immagine">Seleziona immagine</string>
    <string name="crud_txt_anno">Anno</string>
    <string name="crud_txt_autore">Autore</string>
    <string name="crud_txt_descrizione">Descr.</string>
    <string name="crud_manage_percorso">Gestisci i percorsi</string>
    <string name="crud_create_percorso">Nuovo percorso</string>
    <string name="crud_manage_oggetto">Gestisci gli oggetti</string>
    <string name="crud_provincia">Provincia: </string>
    <string name="crud_manage_autori">Gestisci gli autori</string>
</resources>