<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/menu_icon_foreground"
            android:title="@string/crud_manage_profilo"/>
    </group>

    <item android:title="">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_manage_museo"
                    android:icon="@drawable/museo_marker2"
                    android:title="@string/crud_manage_museo"/>

                <item
                    android:id="@+id/nav_manage_oggetto"
                    android:icon="@drawable/gopuram"
                    android:title="@string/crud_manage_oggetto"/>

                <item
                    android:id="@+id/nav_manage_autori"
                    android:icon="@drawable/users"
                    android:title="@string/crud_manage_autori"/>

                <item
                    android:id="@+id/nav_cerca"
                    android:icon="@drawable/cerca"
                    android:title="@string/cerca_musei_oggetti"/>
            </group>
        </menu>
    </item>

</menu>