<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crud_create_museo"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crud_txt_nome"
            android:textSize="24dp" />

        <EditText
            android:id="@+id/etNomeMuseo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crud_txt_telefono"
            android:textSize="24dp" />

        <EditText
            android:id="@+id/etNumTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crud_txt_indirizzo"
            android:textSize="24dp" />

        <EditText
            android:id="@+id/etIndirizzo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="24dp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crud_txt_sito"
            android:textSize="24dp" />

        <EditText
            android:id="@+id/etSitoWeb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crud_txt_orario_apertura"
            android:textSize="24dp" />

        <EditText
            android:id="@+id/etOrario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crud_txt_citta"
            android:textSize="24dp" />

        <Spinner
            android:id="@+id/etCitta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/museum_image"
            android:textSize="24dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="61dp"
            android:layout_below="@+id/button1"
            android:layout_alignLeft="@+id/button1"
            android:layout_alignStart="@+id/button1" />


        <Button
            android:id="@+id/btn_upload_immagine"
            android:layout_width="206dp"
            android:layout_height="46dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/crud_txt_seleziona_immagine"/>

        <Button
            android:id="@+id/btn_salva_museo"
            android:layout_width="206dp"
            android:layout_height="46dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/crud_txt_salva"/>
    </LinearLayout>
</ScrollView>