<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crud_txt_nome"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/labelProvinciaOggetto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crud_provincia"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/labelNomeOggetto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crud_txt_anno"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/labelAnnoOggetto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crud_txt_autore"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/labelAutoreOggetto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crud_txt_descrizione"
        android:textSize="24dp" />
    <EditText
        android:id="@+id/labelDescOggetto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_salva_oggetto"
        android:layout_width="206dp"
        android:layout_height="46dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/crud_txt_salva"/>

</LinearLayout>