<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/menu_icon_foreground"
            android:title="@string/importa_percorsi_visita"/>
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/menu_icon_foreground_cog_fa"
                android:title="@string/impostazioni"/>

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/menu_icon_signature_foreground"
                android:title="@string/recensisci"/>
        </menu>
    </item>

</menu>