<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/crud_visualizza_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/etCodiceMuseo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/etNomeMuseo"
            android:text="@string/crud_txt_nome"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etNomeMuseo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/etNumTelefono"
            android:text="@string/crud_txt_telefono"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etNumTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="phone"
            android:inputType="phone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/etIndirizzo"
            android:text="@string/crud_txt_indirizzo"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etIndirizzo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="postalAddress"
            android:inputType="textPostalAddress" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/etEmail"
            android:text="@string/email"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/etSitoWeb"
            android:text="@string/crud_txt_sito"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etSitoWeb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:inputType="textWebEditText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/etOrario"
            android:text="@string/crud_txt_orario_apertura"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etOrario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:inputType="time" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/txtCitta"
            android:text="@string/crud_txt_citta"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etCitta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:inputType="none" />

        <!-- Usato per passare l'ID della città
        (è un campo nascosto) -->
        <EditText
            android:id="@+id/etIdCitta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:inputType="none"
            android:visibility="invisible" />
        <!-- ///////////////////////////////////// -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/imageView"
            android:text="@string/museum_image"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="61dp"
            android:contentDescription="@string/crud_txt_immagine"
            android:src="@drawable/museo" />

        <Button
            android:id="@+id/btn_upload_immagine"
            android:layout_width="206dp"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/crud_txt_seleziona_immagine" />

        <TextView
            android:id="@+id/lblError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/red"/>

        <Button
            android:id="@+id/btn_salva_museo"
            android:layout_width="206dp"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/crud_txt_salva"/>
    </LinearLayout>


</ScrollView>