<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="it.sms.eproject.fragment.home.crud.museo.CrudMuseo"
        android:label="@string/menu_home"
        tools:layout="@layout/crudmuseo_fragment" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="it.sms.eproject.fragment.home.crud.CrudOggetto"
        android:label="@string/menu_gallery"
        tools:layout="@layout/crudoggetto_fragment" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="it.sms.eproject.fragment.home.crud.CrudZona"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/crudzona_fragment" />
</navigation>