<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/menu_icon_foreground"
            android:title="@string/crud_manage_profilo"/>
    </group>

    <item android:title="">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_create_percorso"
                    android:icon="@drawable/menu_icon_signature_foreground"
                    android:title="@string/crud_create_percorso"/>
                <item
                    android:id="@+id/nav_manage_percorso"
                    android:icon="@drawable/menu_icon_signature_foreground"
                    android:title="@string/crud_manage_percorso"/>
            </group>
        </menu>
    </item>

</menu>