<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:padding="16dp">

    <include
        layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="127dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:text="@string/crud_cancella"
        android:textSize="34dp"
        android:textAlignment="center"/>



    <Button
        android:id="@+id/btnDeleteOggetto"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:text="@string/cancella"/>
    <Button
        android:id="@+id/btnCancelOggetto"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:text="@string/annulla"/>


</LinearLayout>